# CrustyJS

./: Cargo.toml
core/: .gitignore  Cargo.toml  LIMITATIONS.md  README.md
core/examples/: classes.js  destructuring.js  error_handling.js  fib.js  kitchen_sink.js  objects.js  users.js
core/examples/modules/: main.js  utils.js
core/src/: context.rs  engine.rs  lib.rs  main.rs
core/src/diagnostics/: mod.rs  source_map.rs  stack_trace.rs
core/src/embedding/: callback.rs  class_builder.rs  event_target.rs  function_args.rs  handle.rs  mod.rs
core/src/errors/: mod.rs  runtime_error.rs  syntax_error.rs
core/src/lexer/: cursor.rs  mod.rs  number_ident_scanner.rs  scanner.rs  string_scanner.rs  token.rs
core/src/parser/: class_parser.rs  expr_literals.rs  expr_ops.rs  expr_parser.rs  mod.rs  module_parser.rs  pattern_parser.rs  stmt_parser.rs  stmt_parser_loops.rs  stmt_terminator.rs  switch_parser.rs
core/src/repl/: completer.rs  mod.rs
core/src/runtime/: mod.rs
core/src/vm/: mod.rs
core/tests/: array_tests.rs  builtins_tests.rs  class_tests.rs  closure_tests.rs  collection_tests.rs  destructuring_tests.rs  embedding_tests.rs  error_handling_tests.rs  event_loop_tests.rs  gc_tests.rs  generator_tests.rs  integration_tests.rs  interpreter_tests.rs  iterator_tests.rs  lexer_error_tests.rs  lexer_tests.rs  module_tests.rs  object_tests.rs  parser_tests.rs  promise_tests.rs  proxy_tests.rs  reflect_tests.rs  regexp_tests.rs  spread_tests.rs  stack_trace_tests.rs  string_tests.rs  switch_tests.rs  symbol_tests.rs  vm_tests.rs  weak_collection_tests.rs
(+121 files in other folders)
