[package]
name = "core"
version = "0.1.0"
edition = "2024"

[lib]
name = "crustyjs"
path = "src/lib.rs"

[dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time"] }
